# qzxing

./: CMakeLists.txt
src/: CMakeLists.txt  QZXing.cmake.in  QZXingConfig.cmake.in
